# brasileiro

./: .gitignore  README.MD  compose.yaml  index.html  package.json  pyproject.toml  rsync-ssh.bat
back-end/: .dockerignore  .gitignore  Dockerfile  deploy.sh  docker-compose.prod.yml  entrypoint.sh  pyproject.toml
back-end/nginx/: prod.conf
back-end/songAPI/: db.sqlite3  manage.py  pyproject.toml  schema.yml  settings.py
back-end/songAPI/authorization/: apps.py  views.py
back-end/songAPI/cloud-connection/: get_cloud_data.py
back-end/songAPI/songAPI/: asgi.py  settings.py  urls.py  wsgi.py
back-end/songAPI/songAPI/authorization/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
back-end/songAPI/songAPI/authorization/migrations/: 0001_initial.py  0002_profile_user.py  0003_alter_profile_user.py  0004_playlist.py  0005_playlist_song_order.py
back-end/songAPI/songAPI/services/: b2_cloud_storage.py
back-end/songAPI/songAPI/songs/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
back-end/songAPI/songAPI/songs/management/commands/: import_b2_manifest.py  normalize_song_catalog.py
back-end/songAPI/songAPI/songs/migrations/: 0001_initial.py  0002_alter_song_key.py  0003_remove_song_url_song_version_alter_song_key_and_more.py  0004_artist_remove_song_key_song_filename_song_genre_and_more.py  0005_alter_song_filename.py  0006_alter_artist_options_alter_song_options_and_more.py  0007_song_artist_text_song_storage_key_and_more.py  0008_book_song_book_song_index.py
front-end/: .env.example  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: App.tsx  Layout.tsx  index.css  vite-env.d.ts
front-end/src/api/: auth.ts  playlists.ts  static-api-data.ts
front-end/src/components/: AppBrand.tsx  ProfileMenu.tsx
front-end/src/contexts/: SongContext.ts
front-end/src/pages/: acknowledgments.tsx  all-songs.tsx  book-detail.tsx  books.tsx  (+6 more)
pdf-processing-engine/: README.md  engine.py  pyproject.toml
pdf-processing-engine/docs/: classification-pipeline.md
pdf-processing-engine/public/: manual_classifications.txt
pdf-processing-engine/src/: correct_songs_with_llm.py  evaluate_classification_regression.py  evaluate_engine.py  main.py  normalization.py  rename_songs.py  rename_songs_old.py  sample_get_all_songs.json  sandbox.py
pdf-processing-engine/src/data/: corrected_songs.csv  page_classification_labels.json
pdf-processing-engine/src/engine/: ClassificationEngine.py  Lda.py  Page.py  PageClassifier.py  PageFeatures.py  PageSequenceRefiner.py  TitleExtractor.py  Transformer.py
pdf-processing-engine/src/music/: corrected_songs.csv  renamed_files.csv  songs.csv
pdf-processing-engine/src/scripts/: attach_books_to_manifest.py
pdf-processing-engine/src/scripts/api/: upload-songs.py
pdf-processing-engine/src/scripts/cloud/: upload_final_to_b2.py
pdf-processing-engine/tests/: test_correct_songs_with_llm.py  test_rename_songs.py  test_upload_final_to_b2.py
public/: architecture.drawio  architecture.xml
public/app-architecture/: architecture.drawio  architecture.xml
public/database-schema/: database-schema.drawio
src/: App.tsx  Layout.tsx
src/api/: static-api-data.ts
src/types/: songs.ts
(+12 files in other folders)
