[project]
name = "pdf-processing-engine"
version = "0.1.0"
description = "A processing engine for books of sheet music"
authors = [
    {name = "AmitaiRosenbaum",email = "amitai.rosenbaum@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.38.36,<2.0.0)",
    "ocrmypdf (>=16.10.2,<17.0.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "scikit-learn>=1.8.0",
]


[tool.uv]
package = false
