[project]
name = "song-api"
version = "0.1.0"
description = "An API for sheet music written with Django"
authors = [
    {name = "AmitaiRosenbaum",email = "amitai.rosenbaum@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "boto3 (>=1.38.35,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-storages[s3] (>=1.14.6,<2.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
